--- a/SimulatedWorkGames-main/ConnectFour/index.html
+++ b/SimulatedWorkGames-main/ConnectFour/index.html
@@ -35,7 +35,7 @@
             <button class="reset-scores-button" id="resetScoresButton">Reset Scores</button>
             <label class="sound-toggle">
                 <input type="checkbox" id="soundToggle" checked>
-                Sound Effects
+                <span class="sound-toggle-label"></span>Sound Effects</span>
             </label>
         </div>
     </div>
